# quant

./: .gitignore  .gitlab-ci.yml  docker.sh  main.py  pyproject-pdm.toml  pyproject-uv.toml  pyproject.toml  readme.md  requirements.txt  run.sh
algorithm/: __init__.py  algorithms.py  api.py  schedulers.py  tasks.py  website.py
algorithm/basic/: __init__.py  authentication.py  fetch.py  plot.py  printf.py
algorithm/core/: fetch.py  judgement.py  policy.py  trend.py
algorithm/data/: etfs.py  fetch.py  index.py  market.py  product.py  stocks.py
algorithm/dividend/: __init__.py  fetch.py  judgement.py  policy.py  product.py  task.py  tasks.py  trend.py
algorithm/limitup/: fetch.py  plot.py  product.py  task.py  tasks.py  trend.py
algorithm/middleware/: __init__.py  authentication.py  logger.py  messages.py  minios.py  process.py
algorithm/middlewares/: __init__.py  process.py
algorithms/: algorithms.py  schedulers.py  tasks.py
algorithms/basic/: fetch.py  index.py  plot.py  stock.py  stocks.py
algorithms/core/: __init__.py  index.py  indices.py  judgement.py  plot.py  policy.py  sse.py  trend.py
algorithms/core/content_generate/: online_function.py
algorithms/core/nl_sql/: online_function.py
algorithms/core/stocks/: sse.py
algorithms/middlewares/: __init__.py  authentication.py  callbacks.py  logger.py  messages.py  minios.py  process.py  utils.py
algorithms/openapi/: __init__.py  ai_platform.py  run.py
api/: __init__.py  algorithms.py  schedulers.py  website.py
axon/compile/: run.py
axon/documents/: __init__.py  changelog.md  index.md  mkdocs.yml  run.py
axon/documents/extra/: extra.css
axon/documents/markdowns/: generate-content.md  nl-sql.md  quant-sse.md  quant.md
axon/documents/openapi/: algorithm_sse.py
axon/documents/routes/: __init__.py  generate_content.py  nl_sql.py  sse.py
axon/homepage/: 404.html  changelog.html  index.html
axon/homepage/markdowns/: generate-content.html  nl-sql.html  quant.html
axon/homepage/search/: search_index.json
axon/swagger/: project-api.json  swagger-initializer.js
data/dividend/report/: all.xlsx
data/etfs/csi931468/: raw.parquet
data/etfs/csiH30269/: raw.parquet
data/etfs/sh000016/: raw.parquet
data/etfs/sh000092/: raw.parquet
data/etfs/sh000300/: raw.parquet
data/etfs/sh000510/: raw.parquet
data/etfs/sh000688/: raw.parquet
data/etfs/sh000852/: raw.parquet
data/etfs/sh000905/: raw.parquet
data/etfs/sh000985/: raw.parquet
data/etfs/sz000333/: raw.parquet
data/etfs/sz000538/: raw.parquet
data/etfs/sz000568/: raw.parquet
data/etfs/sz000651/: raw.parquet
data/etfs/sz000858/: raw.parquet
data/etfs/sz003816/: raw.parquet
data/etfs/sz399006/: raw.parquet
data/input/: dividends.xlsx
data/input/sh600025/: raw.parquet
data/input/sh600028/: raw.parquet
data/input/sh600036/: raw.parquet
data/input/sh600096/: raw.parquet
data/input/sh600309/: raw.parquet
data/input/sh600519/: raw.parquet
data/input/sh600600/: raw.parquet
data/input/sh600690/: raw.parquet
data/input/sh600795/: raw.parquet
data/input/sh600886/: raw.parquet
data/input/sh600887/: raw.parquet
data/output/: etf.xlsx  report.xlsx  stock.xlsx
data/stock/: dividends.xlsx
docker/: .bashrc  debian.sources  docker.sh  dockerfile  dockerfile-environment  dockerfile-stable  sources.list
docs/: run.py
docs/documents/: __init__.py  mkdocs.yml  run.py
docs/swagger/: swagger-initializer.js
docs/website/: zensical.toml
project/: __init__.py  applications.py  config.py  configuration.py  setup.py
test/: test.py
website/: __init__.py  run.py  zensical.toml
website/api/: __init__.py  platform.py  quant.py
website/docs/: index.md
website/site/: 404.html  index.html  search.json
(+66 files in other folders)
