# ---------------------------------------------
# Copyright 2015 for Zen. All Rights Reserved.
# ---------------------------------------------

[[tool.pdm.source]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple"

[project]
name = "quant"
version = "0.1.0"
description = ""
authors = [{name = "Zen", email = "zhrkevin@gmail.com"}]
dependencies = []
requires-python = ">=3.14"
readme = "readme.md"
license = {text = "Apache-2.0"}

[project.optional-dependencies]
docs = [
    "apispec>=6.10.0",
    "mkdocs>=1.6.1",
    "mkdocs-autolinks-plugin>=0.7.1",
    "mkdocs-material>=9.7.5",
    "mkdocs-material-extensions>=1.3.1",
    "mkdocs-table-reader-plugin>=3.1.0",
    "pymdown-extensions>=10.21",
    "python-calamine>=0.6.2",
    "zensical>=0.0.27",
]
main = [
    "akshare>=1.18.39",
    "akshare-proxy-patch>=0.2.13",
    "apscheduler>=3.11.2",
    "click>=8.3.1",
    "cryptography>=46.0.5",
    "cython>=3.2.4",
    "fastexcel>=0.19.0",
    "httpx>=0.28.1",
    "kombu>=5.6.2",
    "loguru>=0.7.3",
    "minio>=7.2.20",
    "numpy>=2.4.3",
    "pandas>=3.0.1",
    "pathspec>=1.0.4",
    "plotly>=6.6.0",
    "polars>=1.39.0",
    "pyarrow>=23.0.1",
    "python-box>=7.4.1",
    "sanic>=25.12.0",
    "shortuuid>=1.0.13",
    "xlsxwriter>=3.2.9",
]
